@@ -25,6 +25,7 @@ public interface IFluxPackageRecipeInfo extends IPackageRecipeInfo {
 
 	@Override
 	default List<ItemStack> getOutputs() {
-		return Collections.singletonList(getOutput());
+		ItemStack output = getOutput();
+		return output.isEmpty() ? List.of() : List.of(output);
 	}
 }
